site/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  labels:
    app: site
spec:
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: site
        image: hashbang/hashbang.sh
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            httpHeaders:
            - name: X-Forwarded-Proto
              value: "https"
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            httpHeaders:
            - name: X-Forwarded-Proto
              value: "https"
          initialDelaySeconds: 30
          periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: site
  labels:
    app: site
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: site
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.kubernetes.io/hostname: hashbang.sh
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: hashbang.sh
    http:
      paths:
      - backend:
          service:
            name: site
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hashbang.sh
    secretName: site-tls
