site/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: site-deny-all-but-incoming-http
spec:
  endpointSelector:
    matchLabels:
      k8s:app: site
  ingress:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  - toEntities:
    - all
  # - toPorts:
  #   - ports:
  #     - port: "53"
  #       protocol: UDP
  # - toServices:
  #   - k8sServiceSelector:
  #       selector:
  #         matchLabels:
  #           app: userdb-api
